--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -16,7 +16,14 @@
                 <!-- Leito + Quarto + Unidade Funcional -->
                 <div class="ui-g-2">
                     <label>Leito</label>
-                    <input type="text" pInputText [disabled]="true" />
+                    <app-leito
+                        [parentFormGroup]="formGroup"
+                        [required]="true"
+                        name="leito"
+                        label="Leito"
+                        (select)="aoSelecionarLeito($event)"
+                        (blur)="aoDesfocarLeito()"
+                    ></app-leito>
                 </div>
                 <div class="ui-g-4">
                     <label>Quarto</label>
