Customização de itens de Triagem e Classificação de Risco

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
@@ -19,26 +19,36 @@ H3 {
     background-color: red;
     height: 50px;
     width: 50px;
+    border: 2px solid grey;
+    border-radius: 10px;
 }
 
 .laranja {
     background-color: orange;
     height: 50px;
     width: 50px;
+    border: 2px solid grey;
+    border-radius: 10px;
 }
 .amarelo {
     background-color: yellow;
     height: 50px;
     width: 50px;
+    border: 2px solid grey;
+    border-radius: 10px;
 }
 .verde {
     background-color: green;
     height: 50px;
     width: 50px;
+    border: 2px solid grey;
+    border-radius: 10px;
 }
 
 .azul {
     background-color: blue;
     height: 50px;
     width: 50px;
+    border: 2px solid grey;
+    border-radius: 10px;
 }
